# chat-ai

./: Cargo.toml  LICENSE  README.md
src/: chat.rs  handler.rs  main.rs  theme.rs  window.rs
src/services/agent/: client.rs  messages.rs  mod.rs
themes/: ayu.json  catppuccin.json
