[package]
name = "chatai"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
gpui = "0.2"
gpui-component = "0.5.0-preview2"
gpui-component-assets = "0.5.0-preview2"
rust-embed = "8.9.0"
serde = "1"
serde_json = "1.0.145"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
smol = "2.0.2"
smolhttp = "1.1.0"
